--- a/prova/index2.html
+++ b/prova/index2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>alert("aloooo!!!!");</script>
+    <script>//slaaaaaa</script>
 </body>
 </html>
